feb 20 commit